3.0.19.62

3.0.19.61
<rdar://70890252> (Apple Internal) Relax topology paxos repair participant requirements
<rdar://71121568> (Apple Internal) AssertionError in clouddb_p97 with 3.0.19.59
<rdar://56205057> (Apple Internal) Mitigate CAS Write Contention via Lightweight Coordinator locking
<rdar://70780990> (CASSANDRA-15385) Ensure that tracing doesn't break connections in 3.x/4.0 mixed mode by default

3.0.19.60
* <rdar://70624271> (Apple Internal) Follow-up: apple paxos can re-prepare stable ballots in some cases

3.0.19.59
* <rdar://70521993> (Apple Internal) Support UNSAFE_DELAY_X with Apple Paxos

3.0.19.58
* <rdar://70624271> (Apple Internal) apple paxos can re-prepare stable ballots in some cases
* <rdar://70717584> (Apple Internal) Deadlock in Keyspace/Table initialisation
* <rdar://70632084> CASSANDRA-15623: cqlsh return non-zero status when STDIN CQL fails
* <rdar://70610232> CASSANDRA-16094: Avoid marking shutting down nodes as up after receiving gossip shutdown message

3.0.19.57
* <rdar://70593412> (Apple Internal) apple_norrfwl retains read/read linearizability
* <rdar://70591830> (Apple Internal) WaitManager.waitUntil incorrectly calculates time to wait)
* <rdar://70250861> (Apple Internal) Follow-up: Avoid incrementing failedAttemptsDueToContention twice
* <rdar://70250861> (Apple Internal) Improve tests for (Paxos: Configurable contention strategy)
* <rdar://70358960> (Apple Internal) Cie-cassandra images not properly mirroring to SR

3.0.19.56
* <rdar://70355825> (Apple Internal) custom index target columns aren't quoted (#1974)

3.0.19.55
* <rdar://70252084> (Apple Internal) Paxos: Auto Trace/Log Contended Operations)
* <rdar://70268521> (Apple Internal) Paxos: Introduce variant apple_norrfwl (#1963)
* <rdar://70250861> (Apple Internal) Paxos: Configurable contention strategy (#1960)
* <rdar://70225679> (Apple Internal) Paxos: read contention not correctly maintained