@@ -1,4 +1,5 @@
 3.0.19.62
+<rdar://73822264> (Apple Internal) Faster hash path for clusters under high auth churn
 
 3.0.19.61
 <rdar://70890252> (Apple Internal) Relax topology paxos repair participant requirements
